# f1-2022-analysis

./: README.md  analysis.ipynb  data-plotting.ipynb  fastest-laps.ipynb  hamilton-russell.ipynb  mitosheet_example.ipynb  pyproject.toml  team-analysis.ipynb
.ipynb_checkpoints/: mitosheet_example-checkpoint.ipynb  team-analysis-checkpoint.ipynb
data/: ABU DHABI.csv  AUSTRALIA.csv  AUSTRIA.csv  AZERBAIJAN.csv  BAHRAIN.csv  BELGUIM.csv  BRAZIL.csv  CANADA.csv  FRANCE.csv  GREATBRITAIN.csv  HUNGARY.csv  ITALY.csv  ITALY2.csv  JAPAN.csv  MEXICO.csv  MIAMI.csv  MONACO.csv  NETHERLANDS.csv  SAUDI ARABIA.csv  SINGAPORE.csv  SPAIN.csv  USA.CSV
data/compiled-data/: fastest-laps.csv  race-results.csv
data/fastest-lap/: fl-abu-dhabi.csv  fl-australia.csv  fl-austria.csv  fl-azerbaijan.csv  fl-bahrain.csv  fl-belguim.csv  fl-brazil.csv  fl-canada.csv  fl-france.csv  fl-greatbritain.csv  fl-hungary.csv  fl-italy.csv  fl-italy2.csv  fl-japan.csv  fl-mexico.csv  fl-miami.csv  fl-monaco.csv  fl-netherlands.csv  fl-saudi-arabia.csv  fl-singapore.csv  fl-spain.csv  fl-usa.csv
iframe_figures/: figure_10.html  figure_13.html  figure_9.html
