[tool.poetry]
name = "f1-2022-analysis"
version = "0.1.0"
description = "Data Anlaysis and Data Science about the 2022 season of F1"
authors = ["Joshua Blewitt <joshblewitt@protonmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.2"
scipy = "^1.8.0"
seaborn = "^0.11.2"
cufflinks = "^0.17.3"
jupyter-dash = "^0.4.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
